--- a/.github/workflows/virmator-tagged-release.yml
+++ b/.github/workflows/virmator-tagged-release.yml
@@ -11,9 +11,9 @@ jobs:
         runs-on: 'ubuntu-latest'
 
         steps:
-            - uses: actions/checkout@v1
-            - name: Use Node.js 16.x
-              uses: actions/setup-node@v1
+            - uses: actions/checkout@v3
+            - name: Use Node.js
+              uses: actions/setup-node@v3
               with:
                   node-version: 16.x
             - name: run test
@@ -24,8 +24,11 @@ jobs:
               id: vars
               run: |
                   tagName="${GITHUB_REF#refs/*/}"
+                  npx virmator compile
                   originalTarName="$(npm pack)"
-                  packageName="$(npm -s run env echo '$npm_package_name')"
+                  packageNameWithoutFileExtension="${originalTarName%.tgz}"
+                  tagNameWithoutV="${tagName##v}"
+                  packageName="${packageNameWithoutFileExtension%-$tagNameWithoutV}"
                   newTarName="$packageName-$tagName.tgz"
                   mv "$originalTarName" "$newTarName"
                   echo ::set-output name=tarName::"$newTarName"
