--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@cosmonic/celestial-alignment",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "description": "Formatting and code health for Cosmonic.",
     "keywords": [
         "formatting",
@@ -26,7 +26,7 @@
     },
     "scripts": {
         "build": "virmator compile && chmod +x dist/cli.js",
-        "format": "virmator format",
+        "format": "virmator format --no-write-config",
         "prepublishOnly": "npm run test:full && npm run build",
         "spellcheck": "virmator spellcheck",
         "test": "virmator test",
