--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@cosmonic/celestial-alignment",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "description": "Formatting and code health for Cosmonic.",
     "keywords": [
         "formatting",
@@ -30,7 +30,7 @@
         "prepublishOnly": "npm run test:full && npm run build",
         "spellcheck": "virmator spellcheck",
         "test": "virmator test",
-        "test:full": "npm test && npm run spellcheck && virmator format check"
+        "test:full": "npm test && npm run spellcheck && virmator format check  --no-write-config"
     },
     "dependencies": {
         "augment-vir": "2.2.1",
