--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
         "align": "./dist/cli.js"
     },
     "scripts": {
-        "build": "virmator compile && chmod +x dist/cli.js",
+        "build": "virmator compile",
         "format": "prettier \"./**/*.+(ts|tsx|json|html|css|md|js|jsx|yml|yaml)\" --write --config \".prettierrc.js\"",
         "prepublishOnly": "npm run test:full && npm run build",
         "spellcheck": "virmator spellcheck",
-        "test": "virmator test",
+        "test": "virmator test --no-write-config",
         "test:full": "npm test && npm run spellcheck && prettier \"./**/*.+(ts|tsx|json|html|css|md|js|jsx|yml|yaml)\" --check --config \".prettierrc.js\""
     },
     "dependencies": {
